@@ -1,3 +1,12 @@
+2005-02-26  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b17
+
+	* Change: Fix the 'No images uploaded' condition
+
+	* Fix: Destroying the session at logout also prevented album redirection because
+	  $gallery->session->album was empty
+
+	* Fix: User input checking
+
 2005-02-24  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b16
 
 	* Change: css enhancement for better readability of links in attention messages.
